# google-hacks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/backend/: app.py
src/backend/static/: index.html
src/config/: __init__.py
src/database/: models.py
src/gemini/: gemini_core.py
src/utils/: token_manager.py
